--- a/football.html
+++ b/football.html
@@ -6,35 +6,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "css/html5reset.css">
     <link rel="stylesheet" href = "css/style.css">
-    <title>Sports Teams</title>
+    <title>Sports</title>
 </head>
 <body>
-    <a href="#main">Skip To Main Content</a>
+    <div class = "skip"><a href="#main">Skip To Main Content</a></div>
     <header>
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "football.html">Football</a></li>
-                <li><a href = "basketball.html">Basketball</a></li>
-                <li><a href = "baseball.html">Baseball</a></li>
+                <li class = "item"><a href = "index.html">Home</a></li>
+                <li class = "current"><a href = "football.html">Football</a></li>
+                <li class = "item"><a href = "basketball.html">Basketball</a></li>
+                <li class = "item"><a href = "baseball.html">Baseball</a></li>
             </ul>
         </nav>
     </header>
-    <main id = main>
-        <h1> Football </h1>
-        <img src = "football_images/tom_brady.jpg" width = "300" height = "200" alt = "Tom Brady">
-        <img src = "football_images/aaron_donald.jpg" width = "300" height = "200" alt = "Aaron Donald">
-        <img src = "football_images/aaron_rodgers.jpg" width = "300" height = "200" alt = "Aaron Rodgers">
-        <img src = "football_images/cooper_kupp.jpg" width = "300" height = "200" alt = "Cooper Kupp">
-        <img src = "football_images/jonathan_taylor.jpg" width = "300" height = "200" alt = "Jonathan Taylor">
-        <img src = "football_images/tj_watt.jpg" width = "300" height = "200" alt = "TJ Watt">
-        <img src = "football_images/davante_adams.jpg" width = "300" height = "200" alt = "Davante Adams">
-        <img src = "football_images/patrick_mahomes.jpg" width = "300" height = "200" alt = "Patrick Mahomes">
-        <img src = "football_images/jalen_ramsey.jpg" width = "300" height = "200" alt = "Jalen Ramsey">
+    <h1> Football </h1>
+    <main class = "container" id = "main">
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/tom_brady.jpg" width = "300" height = "200" alt = "Tom Brady">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Tom Brady <br/>
+                    Team: Tampa Bay Buccaneers <br/>
+                    Time: 2000 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/aaron_donald.jpg" width = "300" height = "200" alt = "Aaron Donald">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Aaron Donald <br/>
+                    Team: Los Angeles Rams <br/>
+                    Time: 2014 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/aaron_rodgers.jpg" width = "300" height = "200" alt = "Aaron Rodgers">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Aaron Rodgers <br/>
+                    Team: Green Bay Packers <br/>
+                    Time: 2005 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/cooper_kupp.jpg" width = "300" height = "200" alt = "Cooper Kupp">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Cooper Kupp <br/>
+                    Team: Los Angeles Rams <br/>
+                    Time: 2017 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/jonathan_taylor.jpg" width = "300" height = "200" alt = "Jonathan Taylor">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Jonathan Taylor <br/>
+                    Team: Indianapolis Colts <br/>
+                    Time: 2020 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/tj_watt.jpg" width = "300" height = "200" alt = "TJ Watt">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: TJ Watt <br/>
+                    Team: Pittsburgh Steelers <br/>
+                    Time: 2017 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/davante_adams.jpg" width = "300" height = "200" alt = "Davante Adams">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Davante Adams <br/>
+                    Team: Las Vegas Raiders <br/>
+                    Time: 2014 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/patrick_mahomes.jpg" width = "300" height = "200" alt = "Patrick Mahomes">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Patrick Mahomes <br/>
+                    Team: Kansas City Chiefs <br/>
+                    Time: 2017 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "football_images/jalen_ramsey.jpg" width = "300" height = "200" alt = "Jalen Ramsey">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Jalen Ramsey <br/>
+                    Team: Los Angeles Rams <br/>
+                    Time: 2016 - Present</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
-        <p>University of Michigan School of Information <br/>
-        Christopher Sayah & Remi Goldberg</p>
+        <h2>University of Michigan School of Information <br/>
+        Christopher Sayah & Remi Goldfarb</h2>
     </footer>
 </body>
 </html>
