--- a/basketball.html
+++ b/basketball.html
@@ -6,35 +6,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "css/html5reset.css">
     <link rel="stylesheet" href = "css/style.css">
-    <title>Sports Teams</title>
+    <title>Sports</title>
 </head>
 <body>
-    <a href="#main">Skip To Main Content</a>
+    <div class = "skip"><a href="#main">Skip To Main Content</a></div>
     <header>
         <nav>
             <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href = "football.html">Football</a></li>
-                <li><a href = "basketball.html">Basketball</a></li>
-                <li><a href = "baseball.html">Baseball</a></li>
+                <li class = "item"><a href = "index.html">Home</a></li>
+                <li class = "item"><a href = "football.html">Football</a></li>
+                <li class = "current"><a href = "basketball.html">Basketball</a></li>
+                <li class = "item"><a href = "baseball.html">Baseball</a></li>
             </ul>
         </nav>
     </header>
-    <main id = main>
-        <h1> Basketball </h1>
-        <img src = "basketball_images/giannis_antetokounmpo.jpg" width = "300" height = "200" alt = "Giannis Antetokounmpo">
-        <img src = "basketball_images/kevin_durant.jpg" width = "300" height = "200" alt = "Kevin Durant">
-        <img src = "basketball_images/stephen_curry.jpg" width = "300" height = "200" alt = "Stephen Curry">
-        <img src = "basketball_images/nikola_jokic.jpg" width = "300" height = "200" alt = "Nikola Jokic">
-        <img src = "basketball_images/joel_embiid.jpg" width = "300" height = "200" alt = "Joel Embiid">
-        <img src = "basketball_images/jayson_tatum.jpg" width = "300" height = "200" alt = "Jayson Tatum">
-        <img src = "basketball_images/luka_doncic.jpg" width = "300" height = "200" alt = "Luka Doncic">
-        <img src = "basketball_images/lebron_james.jpg" width = "300" height = "200" alt = "Lebron James">
-        <img src = "basketball_images/kawhi_leonard.jpg" width = "300" height = "200" alt = "Kawhi Leonard">
+    <h1> Basketball </h1>
+    <main class = "container" id = "main">
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/giannis_antetokounmpo.jpg" width = "300" height = "200" alt = "Giannis Antetokounmpo">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Giannis Antetokounmpo <br/>
+                    Team: Milwaukee Bucks <br/>
+                    Time: 2013 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/kevin_durant.jpg" width = "300" height = "200" alt = "Kevin Durant">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Kevin Durant <br/>
+                    Team: Brooklyn Nets <br/>
+                    Time: 2007 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/stephen_curry.jpg" width = "300" height = "200" alt = "Stephen Curry">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Stephen Curry <br/>
+                    Team: Golden State Warriors <br/>
+                    Time: 2009 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/nikola_jokic.jpg" width = "300" height = "200" alt = "Nikola Jokic">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Nikola Jokic <br/>
+                    Team: Denver Nuggets <br/>
+                    Time: 2012 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/joel_embiid.jpg" width = "300" height = "200" alt = "Joel Embiid">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Joel Embiid <br/>
+                    Team: Philidelphia 76ers <br/>
+                    Time: 2014 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/jayson_tatum.jpg" width = "300" height = "200" alt = "Jayson Tatum">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Jayson Tatum <br/>
+                    Team: Boston Celtics <br/>
+                    Time: 2017 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/luka_doncic.jpg" width = "300" height = "200" alt = "Luka Doncic">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Luka Doncic <br/>
+                    Team: Dallas Mavericks <br/>
+                    Time: 2015 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/lebron_james.jpg" width = "300" height = "200" alt = "Lebron James">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: LeBron James <br/>
+                    Team: Los Angeles Lakers <br/>
+                    Time: 2003 - Present</p>
+                </div>
+            </div>
+        </div>
+        <div class = "flip-box">
+            <div class = "flip-box-inner">
+                <div class = "flip-box-front">
+                    <img src = "basketball_images/kawhi_leonard.jpg" width = "300" height = "200" alt = "Kawhi Leonard">
+                </div>
+                <div class = "flip-box-back">
+                    <p>Player: Kawhi Leonard <br/>
+                    Team: Los Angeles Clippers <br/>
+                    Time: 2011 - Present</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
-        <p>University of Michigan School of Information <br/>
-        Christopher Sayah & Remi Goldberg</p>
+        <h2>University of Michigan School of Information <br/>
+        Christopher Sayah & Remi Goldfarb</h2>
     </footer>
 </body>
 </html>
